internet_gateways.tf
###
### Internet gateways
###
resource "aws_internet_gateway" "gw1" {
    vpc_id = "${aws_vpc.vpc1.id}"
}
